--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>hello world!</h1>
-<img src="http://www.telegraph.co.uk/incoming/article40615.ece/ALTERNATES/w460/la-terrase.jpg" />
+<img src= "http://www.telegraph.co.uk/incoming/article40615.ece/ALTERNATES/w460/la-terrase.jpg />
