--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-<h1>hello world!</h1>
-<img src= "http://www.telegraph.co.uk/incoming/article40615.ece/ALTERNATES/w460/la-terrase.jpg />
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8" />
+  <title>MY TITLE HERE</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="css/my_styles.css" />
+  <script src="js/my_javascript.js"></script>
+</head>
+<body>
+
+  <!--SUPER SIMPLE TEMPLATE-->
+  <div>
+    <p style = "color:blue;"> hello class </p>
+    <p> how are you? </p>
+    <p>now</p>
+    <img src="http://www.bobbyflaysteak.com/files/d28afc58c82bc17f2e18cef8212265c6_full_size.jpg" width="300px" height="300px"/>
+  </div>
+</body>
+</html>
