--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html>
+<body style="background-color:lightgrey;">
 <head>
   <meta charset="utf-8" />
   <title>MY TITLE HERE</title>
@@ -10,7 +12,7 @@
 
   <!--SUPER SIMPLE TEMPLATE-->
   <div>
-    <p style = "color:red;"> <h1><b>Bluto's Steakhouse</b></h1></p>
+    <p style = "color:red;"> <h1>Bluto's Steakhouse</h1></p>
     <p> how are you? </p>
     <p>now</p>
     <img src="http://www.bobbyflaysteak.com/files/d28afc58c82bc17f2e18cef8212265c6_full_size.jpg" width="300px" height="300px"/>
