--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
   <!--SUPER SIMPLE TEMPLATE-->
   <div>
-    <p style = "color:red;"> <h1>Bluto's Steakhouse</h1></p>
+    <p style = "color:red;">h1 {
+    color: blue;
+    font-family: verdana;
+    font-size: 300%;
+
+} <h1>Bluto's Steakhouse</h1></p>
     <p> how are you? </p>
     <p>now</p>
     <img src="http://www.bobbyflaysteak.com/files/d28afc58c82bc17f2e18cef8212265c6_full_size.jpg" width="300px" height="300px"/>
