--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!--SUPER SIMPLE TEMPLATE-->
   <div>
-    <h1 style="color:red;">Bluto's Steakhouse</h1>
+    <h1 style="color:red;">Bluto's Steakhouse; <h1 style="font-family:verdana;"</h1>
     <p> how are you? </p>
     <p>now</p>
     <img src="http://www.bobbyflaysteak.com/files/d28afc58c82bc17f2e18cef8212265c6_full_size.jpg" width="300px" height="300px"/>
