--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-color:lightgrey;">
 <head>
   <meta charset="utf-8" />
-  <h1>BLuto's Steakhouse</h1>
+  <h1 style="color:red;font-family:impact"; BLuto's Steakhouse </h1>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/my_styles.css" />
   <script src="js/my_javascript.js"></script>
