--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <body style="background-color:lightgrey;">
 <head>
   <meta charset="utf-8" />
-  <h1 style="color:red;font-family:impact"; Bluto's Steakhouse </h1>
+  <title>MY TITLE HERE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/my_styles.css" />
   <script src="js/my_javascript.js"></script>
 </head>
 <body>
+
+  <!--SUPER SIMPLE TEMPLATE-->
+  <div>
+    <h1 style="color:red;font-family:impact"; Bluto's Steakhouse </h1>
+
+    <img src="http://www.bobbyflaysteak.com/files/d28afc58c82bc17f2e18cef8212265c6_full_size.jpg" width="400px" height="300px"/>
+  </div>
 </body>
 </html>
