--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-color:lightgrey;">
 <head>
   <meta charset="utf-8" />
-  <title>MY TITLE HERE</title>
+  <title>Bluto's Steakhouse</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/my_styles.css" />
   <script src="js/my_javascript.js"></script>
