--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!--SUPER SIMPLE TEMPLATE-->
   <div>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/New_York_Midtown_Skyline_at_night_-_Jan_2006_edit1.jpg" width="700px" height="500px"/>
     <h1 style="color:red;font-family:impact";>Bluto's Steakhouse</h1>
     <p> how are you? </p>
     <p>now</p>
