--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div>
     <img src="https://img0.etsystatic.com/054/1/6797489/il_fullxfull.761037634_s6ed.jpg" width="1000px" height="250px"/>
     <h1 style="color:red;font-family:impact";>Bluto's Steakhouse</h1>
-    <h3 style="color:black;font-family:impact";>About</h3><h3 style="color:black;font-family:impact";>Menu</h3>
+    <h3 style="color:black;font-family:impact";>About</h3>
 
     <img src="http://www.bobbyflaysteak.com/files/d28afc58c82bc17f2e18cef8212265c6_full_size.jpg" width="400px" height="300px"/>
   </div>
