--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h3 style="color:black;font-family:impact";>About</h3>
 
 
-    <img src="http://www.bobbyflaysteak.com/files/d28afc58c82bc17f2e18cef8212265c6_full_size.jpg" width="400px" height="300px"/>
+    <img src="http://www.bobbyflaysteak.com/files/d28afc58c82bc17f2e18cef8212265c6_full_size.jpg" hspace=10 vspace=10 width="400px" height="300px"/>
   </div>
 </body>
 </html>
