--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div>
     <img src="https://img0.etsystatic.com/054/1/6797489/il_fullxfull.761037634_s6ed.jpg" width="1000px" height="250px"/>
     <h1 style="color:red;font-family:impact";>Bluto's Steakhouse</h1>
-    <a name="About" style="color:black;font-family:impact"</a>
+    <a href="#About">Jump here </a> <a name="About" style="color:black;font-family:impact"</a>
     <a name="Menu" style="color:black;font-family:impact";</a>
 
 
