--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--SUPER SIMPLE TEMPLATE-->
   <div>
     <img src="https://img0.etsystatic.com/054/1/6797489/il_fullxfull.761037634_s6ed.jpg" width="1000px" height="250px"/>
-    <h1 style="color:red;font-family:impact";>Bluto's Steakhouse</h1>
+    <p style="font-size:50px;color:red;font-family:impact";>Bluto's Steakhouse</h1>
     <a href="#About">About </a> <a name="About" style="color:black;font-family:impact"</a>
     <a name="Menu" style="color:black;font-family:impact";</a>
     <p> Welcome to the Bluto's Steakhouse, New York City's finest steakhouse dining.
