--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <div>
     <img src="https://img0.etsystatic.com/054/1/6797489/il_fullxfull.761037634_s6ed.jpg" width="1000px" height="250px"/>
     <p style="font-size:50px;color:red;font-family:impact";>Bluto's Steakhouse </p>
+    <ul class="contact-links">
+    <li><a href="#" class="contact-link mail">m</a></li>
+    <li><a href="#" class="contact-link twitter">t</a></li>
+    <li><a href="#" class="contact-link facebook">f</a></li>
+    <li><a href="#" class="contact-link github">g</a></li>
+</ul>
     <a href="#About">About </a> <a name="About" style="color:black;font-family:impact"</a>
     <a name="Menu" style="color:black;font-family:impact";</a>
     <p> Welcome to the Bluto's Steakhouse, New York City's finest steakhouse dining.
