--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="https://img0.etsystatic.com/054/1/6797489/il_fullxfull.761037634_s6ed.jpg" width="1000px" height="250px"/>
     <p style="font-size:50px;color:red;font-family:impact";>Bluto's Steakhouse </p>
     <a href=".about.html">About</a><a name="About" style="color:black;font-family:impact"</a>
-     <a href="./menu.html">Menu</a>
+     <a href="./menu.html">Menu</a><a name="Menu" style="color:black;font-family:impact"</a>
     <p> Welcome to the Bluto's Steakhouse, New York City's finest steakhouse dining.
       Since 1976, Bluto's has grilled up some of the most notable cuts in Manhattan. Feel free to browse our website. </p>
 
