--- a/about.html
+++ b/about.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html>
+<body style="background-color:lightgrey;">
 <head>
   <meta charset="utf-8" />
   <title>MY TITLE HERE</title>
