--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
      <a href="menu.html">Menu</a><a name="Menu" style="color:black;font-family:impact"</a>
     <p> Welcome to the Bluto's Steakhouse, New York City's finest steakhouse dining.
       Since 1976, Bluto's has grilled up some of the most notable cuts in Manhattan. Feel free to browse our website. </p>
+      <p> "Bluto's is always a New York feast" -Johnny Depp </p>
 
     <img src="http://www.bobbyflaysteak.com/files/d28afc58c82bc17f2e18cef8212265c6_full_size.jpg" hspace=5 vspace=200 width="400px" height="300px"/>
     <img src="http://s3-media3.fl.yelpcdn.com/bphoto/WJuIVynlEfnJTrEd_jFtAA/o.jpg" hspace=20 vspace=200 width="400px" height="300px"/>
