--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--SUPER SIMPLE TEMPLATE-->
   <div>
     <img src="https://img0.etsystatic.com/054/1/6797489/il_fullxfull.761037634_s6ed.jpg" width="1000px" height="250px"/>
-    <p style="font-size:50px;color:red;font-family:impact";>Bluto's Steakhouse </p>
+    <p style="font-size:50px;color:red;font-family:impact";>-Bluto's Steakhouse- </p>
     ________________________________________________________
     <a href="about.html">About</a><a name="About" style="color:black;font-family:impact"</a>
      <a href="menu.html">Menu</a><a name="Menu" style="color:black;font-family:impact"</a>
