--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <body style="background-color:lightgrey;">
 <head>
   <meta charset="utf-8" />
-  <title>MY TITLE HERE</title>
+  <title>Bluto's Menu</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/my_styles.css" />
   <script src="js/my_javascript.js"></script>
@@ -12,7 +12,7 @@
 
   <!--SUPER SIMPLE TEMPLATE-->
   <p>
-    About page
+    <p style="font-size:40px;color:red;font-family:impact";>-MENU- </p>
   </p>
 
 </body>
