--- a/about.html
+++ b/about.html
@@ -12,8 +12,25 @@
 
   <!--SUPER SIMPLE TEMPLATE-->
   <p>
-    <p style="font-size:40px;color:red;font-family:impact";>-MENU- </p>
+    <p style="font-size:40px;color:red;font-family:impact";>-ABOUT BLUTO'S- </p>
   </p>
+  <h3> Since our humble beginnings in 1976, Bluto's has been providing legendary steaks and other delicious dishes to all
+    who come to the great city of New York. Brainchild of Johnny Appleseed, he and his brother Bobby discovered the need
+    for an authentic steak restaurant that the average man could afford, without sacrificing quality for price. It was
+    that single idea which helped Bluto's grow into the establishment it is today. We continue the traditions put forth by Johhny
+    and Bobby, always with spirit, enthusiasm, and love for the art of good tasting food. </h3>
+  <table style="width:100%">
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+</table>
 
 </body>
 </html>
