--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
     for an authentic steak restaurant that the average man could afford, without sacrificing quality for price. It was
     that single idea which helped Bluto's grow into the establishment it is today. We continue the traditions put forth by Johhny
     and Bobby, always with spirit, enthusiasm, and love for the art of good tasting food. </h3>
+    <img src="http://www.sandiegomagazine.com/images/cache/cache_1/cache_c/cache_f/bertrand-mr-as-5aa4dfc1.jpeg?ver=1453445679&aspectratio=1.4971428571429" hspace=10 vspace=150 width="400px" height="300px"/>
   <table style="width:100%">
   <tr>
     <td>Jill</td>
