--- a/menu.html
+++ b/menu.html
@@ -19,9 +19,9 @@
   <h4> Steak and Fish </h4>
   <table style="width:100%">
   <tr>
-    <td>Jill</td>
-    <td>Smith</td>
-    <td>50</td>
+    <td>New York Strip</td>
+    <td>Rib-Eye</td>
+    <td>Fillet Mignon</td>
   </tr>
   <tr>
     <td>Eve</td>
