--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
   </p>
   <h3> Here at Bluto's, we pride ourselves on delivering high quality food that won't break the bank. Be sure to check out our menu below
   to find something that'll suit your taste </h3>
-  <h4> Steak and Fish </h4>
+  <h4> Steak</h4>
   <table style="width:100%">
   <tr>
     <td>New York Strip</td>
