--- a/menu.html
+++ b/menu.html
@@ -30,6 +30,6 @@
   </tr>
 </table>
 <img src="http://www.omahasteaks.com/gifs/big/pr_ss001.jpg" />
-<img src="http://www.allenbrothers.com/media/catalog/product/cache/1/image/1200x/040ec09b1e35df139433887a97daa66f/b/e/beef_ribeye_spring_2010 />_1.jpg"
+<img src="http://www.allenbrothers.com/media/catalog/product/cache/1/image/1200x/040ec09b1e35df139433887a97daa66f/b/e/beef_ribeye_spring_2010_1.jpg"/>
 </body>
 </html>
