--- a/menu.html
+++ b/menu.html
@@ -29,6 +29,19 @@
     <td>18-oz $26</td>
   </tr>
 </table>
+<h4> Salad</h4>
+<table style="width:100%">
+<tr>
+  <td>Chicken Caesar</td>
+  <td>BBQ Chicken Salad</td>
+  <td>Mediterranean</td>
+</tr>
+<tr>
+  <td>$9.50</td>
+  <td>$8.75</td>
+  <td>$10.25</td>
+</tr>
+</table>
 
 
 </body>
