--- a/about.html
+++ b/about.html
@@ -20,5 +20,5 @@
     that single idea which helped Bluto's grow into the establishment it is today. We continue the traditions put forth by Johhny
     and Bobby, always with spirit, enthusiasm, and love for the art of good tasting food. </h3>
     <p> The original Bluto's, circa 1978 </p>
-    <img src="http://www.sandiegomagazine.com/images/cache/cache_1/cache_c/cache_f/bertrand-mr-as-5aa4dfc1.jpeg?ver=1453445679&aspectratio=1.4971428571429"  />
+    <img src="http://www.sandiegomagazine.com/images/cache/cache_1/cache_c/cache_f/bertrand-mr-as-5aa4dfc1.jpeg?ver=1453445679&aspectratio=1.4971428571429" hspace=10 vspace=70 />
   <img src="http://www.destination360.com/north-america/us/new-york/new-york/doubletree-metropolitan-hotel-new-york-city-map.gif" hspace=20 vspace=70 width="500px" height="500px"/>
