--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,19 @@
   <td>$10.25</td>
 </tr>
 </table>
-
+<h4> Drinks</h4>
+<table style="width:100%">
+<tr>
+  <td>Cabernet Sauvignon</td>
+  <td>Moscato</td>
+  <td>Chardonnay</td>
+</tr>
+<tr>
+  <td>$7 (per glass)</td>
+  <td>$6 (per glass)</td>
+  <td>$9 (per glass)</td>
+</tr>
+</table>
 
 </body>
 </html>
