--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/my_styles.css" />
   <script src="js/my_javascript.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 
