--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-color:white;">
 <head>
   <meta charset="utf-8" />
-  <title>Bluto's Steakhouse</title>
+  <a href="index.html">Bluto's Steakhouse</a><a name="Bluto's Steakhouse" style="color;white;font-family:helvetica"</a>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/my_styles.css" />
   <script src="js/my_javascript.js"></script>
