--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:white;">
-<head>
-  <meta charset="utf-8" />
-  <a href="index.html">Bluto's Steakhouse</a><a name="Bluto's Steakhouse" style="color;white;font-family:helvetica"</a>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="css/my_styles.css" />
-  <script src="js/my_javascript.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+	<head>
+		<title>BLUTO's STEAKHOUSE - Home</title><meta property="og:site_name" content="BLUTO&#039;s STEAKHOUSE" />
+<meta property="og:title" content="BLUTO&#039;s STEAKHOUSE" />
+<meta property="og:description" content="Welcome to the homepage of one of the finest steakhouses  and live music venue&#039;s in New York City. We pride ourselves on delivering high quality meals  while also providing top-notch live..." />
+<meta property="og:image" content="http://blutos.weebly.com/uploads/7/1/4/8/71484877/5498191.png?1453746819" />
+<meta property="og:image" content="http://blutos.weebly.com/uploads/7/1/4/8/71484877/5893091.png?1453746831" />
+<meta property="og:image" content="http://blutos.weebly.com/uploads/7/1/4/8/71484877/3619846_orig.jpg" />
+<meta property="og:image" content="http://blutos.weebly.com/uploads/7/1/4/8/71484877/6756631_orig.jpg" />
+<meta property="og:url" content="http://blutos.weebly.com/" />
 </head>
 <body>
 
