--- a/newpage.html
+++ b/newpage.html
@@ -7,13 +7,17 @@
  <script src="js/my_javascript.js"></script>
 </head>
 
-<h1> ABOUT US</h1>
+<div class="jumbotron"
+  <div class="container"
+<img src=""/>
+</div>
+
+<h1> About Holloway's Bar and Grill:</h1>
 
 <body>
 
-  <a href="./index.html"style = "color:grey;">Home</a> <a href="./menu.html"style = "color:grey;">Menu</a>
 
-<p style = "color:grey;"> In 2016, Owner Taylor Holloway opened Holloway's Bar and Grill with the hope of a different but classic feel not found anywhere else in Lexington, Ky. Holloway was born and raised in Versailles Kentucky and attended the great University of Kentucky. With his vision came the want for games, great times with friends, unmatched food and drinks, and live music.
+<p style = "font-family:verdana;color:grey;"> In 2016, Owner Taylor Holloway opened Holloway's Bar and Grill with the hope of a different but classic feel not found anywhere else in Lexington, Ky. Holloway was born and raised in Versailles Kentucky and attended the great University of Kentucky. With his vision came the want for games, great times with friends, unmatched food and drinks, and live music.
 This is a combination not found anywhere else in Lexington. </p>
 <p style = "color:grey;"> Our mission is to make sure you have the time of your life when you come to Holloway's and we are committed to making sure you have a great experience! </p>
 
