--- a/newpage.html
+++ b/newpage.html
@@ -12,7 +12,7 @@
 <img src=""/>
 </div>
 
-<h1> About Holloway's Bar and Grill:</h1>
+<h1> <p style= "font-family:verdana;color:grey;font-size:105%;">About Holloway's Bar and Grill: </p> </h1>
 
 <body>
 
