--- a/newpage.html
+++ b/newpage.html
@@ -12,7 +12,7 @@
 <img src=""/>
 </div>
 
-<h2> <p style= "font-family:arial;color:grey;font-size:100%;">About Holloway's Bar and Grill: </p> </h2>
+<h2> <p style= "font-family:arial;color:grey;font-size:100%;text-align:center;">About Holloway's Bar and Grill: </p> </h2>
 
 <body>
 
