--- a/newpage.html
+++ b/newpage.html
@@ -5,20 +5,26 @@
  <meta name="viewport" content="width=device-width, initial-scale=1" />
  <link rel="stylesheet" href="./css/my_styles.css" />
  <script src="js/my_javascript.js"></script>
+ <script src="js/bootstrap.min.js"></script>
 </head>
-
-<div class="jumbotron"
-  <div class="container"
-<img src=""/>
-</div>
+<body>
+  
+  <div class="jumbotron"
+    <div class="container"
+      <img src=""/>
+    </div>
+  </div>
 
 <h2> <p style= "font-family:arial;color:grey;font-size:100%;text-align:left;">About Holloway's Bar and Grill: </p> </h2>
 
-<body>
+<div>
+  <div>
+    <center> <p style = "font-family:arial;color:grey;font-size:105%;text-align:center;"> In 2016, Owner Taylor Holloway opened Holloway's Bar and Grill with the hope of a different but classic feel not found anywhere else in Lexington, Ky. Holloway was born and raised in Versailles Kentucky and attended the great University of Kentucky. With his vision came the want for games, great times with friends, unmatched food and drinks, and live music.
+      This is a combination not found anywhere else in Lexington. </p> </center>
+    <p style = "font-family:arial;color:grey;font-size:105%;text-align:center;"> Our mission is to make sure you have the time of your life when you come to Holloway's and we are committed to making sure you have a great experience! </p>
+  </div>
 
-<center> <p style = "font-family:arial;color:grey;font-size:105%;text-align:center;"> In 2016, Owner Taylor Holloway opened Holloway's Bar and Grill with the hope of a different but classic feel not found anywhere else in Lexington, Ky. Holloway was born and raised in Versailles Kentucky and attended the great University of Kentucky. With his vision came the want for games, great times with friends, unmatched food and drinks, and live music.
-This is a combination not found anywhere else in Lexington. </p> </center>
-<p style = "font-family:arial;color:grey;font-size:105%;text-align:center;"> Our mission is to make sure you have the time of your life when you come to Holloway's and we are committed to making sure you have a great experience! </p>
+
 
 <img src = "./images/about-page.jpg"/>
 
